src/assets/UIComponents/css/style.css
/* ... */
.index .section7 table td ul li:nth-child(1) {
  color: var(--color3);
  font-size: 60.49px;
  font-weight: 400;
  line-height: 77.91px;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}
.index .section7 table td ul li:nth-child(2) {
  color: var(--color6);
  font-size: 19.57px;
  font-weight: 400;
  line-height: 25.21px;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}
.index .section7 table td ul li:nth-child(3) span {
  width: 30%;
  display: block;
  margin: 15px auto;
}

.un {
  border-bottom: 10px solid #131313;
}
.ib {
  border-bottom: 10px solid #504f4f;
}
.ngo {
  border-bottom: 10px solid #8b8b8b;
}
.exG {
  border-bottom: 10px solid #004e8a;
}

.royal {
  border-bottom: 10px solid #23679c;
}
.rl {
  border-bottom: 10px solid #589c54;
}
.np {
  border-bottom: 10px solid #006eaa;
}
.j {
  border-bottom: 10px solid #13b0e7;
}

.co {
  border-bottom: 10px solid #5ab584;
}
.ce {
  border-bottom: 10px solid #528dad;
}
.sp {
  border-bottom: 10px solid #b9d15b;
}
.ghs {
  border-bottom: 10px solid #8ec4aa;
}

.invited .table-responsive {
  border-radius: 10px;
  height: 93vh;
}

.invited table thead tr th:first-child {
  background-color: var(--color1);
  color: var(--color2);
  width: 30%;
}

.invited table thead tr th:last-child {
  background-color: var(--color3);
  color: var(--color2);
  width: 70%;
}

.invited table tbody tr:nth-child(odd) td:first-child {
  background-color: #cfd5e3;
}
.invited table tbody tr:nth-child(odd) td:last-child {
  background-color: #d8e5cf;
}

.invited table tbody tr:nth-child(even) td:first-child {
  background-color: #e4e9f2;
}
.invited table tbody tr:nth-child(even) td:last-child {
  background-color: #eaf1e6;
}

::-webkit-scrollbar {
  width: 15px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px transparent;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #dce7b0;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #dce7b0;
}

.partner_carousel img {
  width: 80px;
  height: 80px;
}

.partner_carousel ul li {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px dashed #12894099;
  margin: 20px 0;
  border-radius: 10px;
}

.speakers img {
  width: 100%;
}

.badge h6 {
  font-size: 24px;
  font-weight: 700;
  line-height: 40px;
  text-align: center;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-underline-position: from-font;
  text-decoration-skip-ink: auto;
  color: var(--color1);
}

.badge li {
  line-height: 8;
}

.form-floating > .form-control-plaintext ~ label::after,
.form-floating > .form-control:focus ~ label::after,
.form-floating > .form-control:not(:placeholder-shown) ~ label::after,
.form-floating > .form-select ~ label::after {
  position: absolute;
  inset: 1rem 0.375rem;
  z-index: -1;
  height: 1.5em;
  content: "";
  background-color: transparent;
  border-radius: var(--bs-border-radius);
}

.floating_dots {
  position: fixed;
  z-index: 1;
  bottom: 0;
  top: 0;
  margin: auto;
  display: flex;
  align-items: center;
  width: 30%;
  padding: 0 10px;
}

.floating_dots ul {
  list-style: none;
  padding: 0;
}

.floating_dots ul li {
  display: flex;
  align-items: center;
  line-height: 2;
  margin: 10px 0;
}

.floating_dots ul li a span {
  background-color: #d9d9d9;
  height: 17px;
  width: 17px;
  border-radius: 50%;

  cursor: pointer;
}
.floating_dots ul li a {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.floating_dots ul li a p {
  display: none;
  margin: 0 20px;
  position: absolute;
  font-size: 16px;
  font-weight: 700;
  line-height: 20.61px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.floating_dots ul li a:hover p {
  display: block;
}

.map iframe:hover {
  position: relative;
  z-index: 9;
}

.partner1 .section7 {
  background-image: url(../images/bg2.png);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  height: auto;
  padding: 0;
}

.dropbtn {
  background-color: transparent;
  color: white;
  padding: 8px;
  font-size: 16px;
  border: 1px solid var(--color2);
}

.hover-dropdown {
  position: relative;
  display: inline-block;
}

.hover-dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.hover-dropdown-content a {
  color: black;
  padding: 5px 5px;
  text-decoration: none;
  display: block;
  border-bottom: 1px solid var(--color-dim);
}

.hover-dropdown-content a:hover {
  background-color: #ddd;
}

.hover-dropdown:hover .hover-dropdown-content {
  display: block;
}

.hover-dropdown:hover .dropbtn {
  background-color: #3e8e41;
}

.active .dropbtn {
  background-color: var(--color3);
}

.footerLinks .partner{
  background-image: var(--gradient3);
}
.footerLinks h1 {
  font-size: 64px;
  font-weight: 700;
  line-height: 82.43px;
  text-transform: uppercase;
  text-decoration-line: underline;
  text-decoration-style: solid;
  text-underline-position: from-font;
  text-decoration-skip-ink: auto;
  color: var(--color1);
}
.footerLinks .f1 {
  background: linear-gradient(0deg, #ffffff 0%, #e8f0cc 100%);
}

.footerLinks h2 {
  display: flex;
  align-items: center;
  font-size: 34px;
  font-weight: 700;
  line-height: 43.79px;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
  color: var(--color3);
}
.footerLinks p {
  font-size: 24px;
  font-weight: 500;
  line-height: 30.91px;
  text-align: justify;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.footerLinks ul li {
  font-size: 24px;
  font-weight: 700;
  line-height: 30.91px;
  text-align: justify;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

.footerLinks ul li span{
  font-weight: 500;
}

.footerLinks .sublist{
  color: var(--color1);
  font-weight: 600;
}
/* ... */

